adjusted map and create movement components

--- a/Project/vs2017/Flagball/Flagball.vcxproj
+++ b/Project/vs2017/Flagball/Flagball.vcxproj
@@ -37,21 +37,23 @@
     <ClCompile Include="..\..\source\MainMenuState.cpp" />
     <ClCompile Include="..\..\source\MapLoader.cpp" />
     <ClCompile Include="..\..\source\MathHelper.cpp" />
+    <ClCompile Include="..\..\source\MovementComponent.cpp" />
     <ClCompile Include="..\..\source\NLTmxMap.cpp" />
     <ClCompile Include="..\..\source\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="..\..\source\PhysicsManager.cpp" />
+    <ClCompile Include="..\..\source\PlayerControllerComponent.cpp" />
     <ClCompile Include="..\..\source\PlayState.cpp" />
     <ClCompile Include="..\..\source\RenderComponent.cpp" />
     <ClCompile Include="..\..\source\RenderManager.cpp" />
     <ClCompile Include="..\..\source\ResourceManager.cpp" />
     <ClCompile Include="..\..\source\RigidBodyComponent.cpp" />
     <ClCompile Include="..\..\source\ScoreComponent.cpp" />
+    <ClCompile Include="..\..\source\SetupState.cpp" />
     <ClCompile Include="..\..\source\SoundManager.cpp" />
     <ClCompile Include="..\..\source\SpriteRenderComponent.cpp" />
-    <ClCompile Include="SetupState.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\AABBColliderComponent.h" />
@@ -72,9 +74,11 @@
     <ClInclude Include="..\..\include\MainMenuState.h" />
     <ClInclude Include="..\..\include\MapLoader.h" />
     <ClInclude Include="..\..\include\MathHelper.h" />
+    <ClInclude Include="..\..\include\MovementComponent.h" />
     <ClInclude Include="..\..\include\NLTmxMap.h" />
     <ClInclude Include="..\..\include\pch.h" />
     <ClInclude Include="..\..\include\PhysicsManager.h" />
+    <ClInclude Include="..\..\include\PlayerControllerComponent.h" />
     <ClInclude Include="..\..\include\PlayState.h" />
     <ClInclude Include="..\..\include\rapidxml.h" />
     <ClInclude Include="..\..\include\RenderComponent.h" />
