--- a/Project/vs2017/Flagball/Flagball.vcxproj
+++ b/Project/vs2017/Flagball/Flagball.vcxproj
@@ -33,6 +33,7 @@
     <ClCompile Include="..\..\source\GameState.cpp" />
     <ClCompile Include="..\..\source\GameStateManager.cpp" />
     <ClCompile Include="..\..\source\InputManager.cpp" />
+    <ClCompile Include="..\..\source\BallComponent.cpp" />
     <ClCompile Include="..\..\source\LayerComponent.cpp" />
     <ClCompile Include="..\..\source\MainMenuState.cpp" />
     <ClCompile Include="..\..\source\MapLoader.cpp" />
@@ -45,6 +46,7 @@
     </ClCompile>
     <ClCompile Include="..\..\source\PhysicsManager.cpp" />
     <ClCompile Include="..\..\source\PlayerControllerComponent.cpp" />
+    <ClCompile Include="..\..\source\PlayFieldComponent.cpp" />
     <ClCompile Include="..\..\source\PlayState.cpp" />
     <ClCompile Include="..\..\source\RenderComponent.cpp" />
     <ClCompile Include="..\..\source\RenderManager.cpp" />
@@ -70,6 +72,7 @@
     <ClInclude Include="..\..\include\GameStateManager.h" />
     <ClInclude Include="..\..\include\ICollisionObserver.h" />
     <ClInclude Include="..\..\include\InputManager.h" />
+    <ClInclude Include="..\..\include\BallComponent.h" />
     <ClInclude Include="..\..\include\LayerComponent.h" />
     <ClInclude Include="..\..\include\MainMenuState.h" />
     <ClInclude Include="..\..\include\MapLoader.h" />
@@ -79,6 +82,7 @@
     <ClInclude Include="..\..\include\pch.h" />
     <ClInclude Include="..\..\include\PhysicsManager.h" />
     <ClInclude Include="..\..\include\PlayerControllerComponent.h" />
+    <ClInclude Include="..\..\include\PlayFieldComponent.h" />
     <ClInclude Include="..\..\include\PlayState.h" />
     <ClInclude Include="..\..\include\rapidxml.h" />
     <ClInclude Include="..\..\include\RenderComponent.h" />
