--- a/Project/vs2017/Flagball/Flagball.vcxproj
+++ b/Project/vs2017/Flagball/Flagball.vcxproj
@@ -61,6 +61,7 @@
     <ClCompile Include="..\..\source\SoundManager.cpp" />
     <ClCompile Include="..\..\source\SpriteAnimationComponent.cpp" />
     <ClCompile Include="..\..\source\SpriteRenderComponent.cpp" />
+    <ClCompile Include="..\..\source\StunStarComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\AABBColliderComponent.h" />
@@ -103,6 +104,7 @@
     <ClInclude Include="..\..\include\SoundManager.h" />
     <ClInclude Include="..\..\include\SpriteAnimationComponent.h" />
     <ClInclude Include="..\..\include\SpriteRenderComponent.h" />
+    <ClInclude Include="..\..\include\StunStarComponent.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
