--- a/Project/vs2017/Flagball/Flagball.vcxproj.filters
+++ b/Project/vs2017/Flagball/Flagball.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClCompile Include="..\..\source\StunStarComponent.cpp">
       <Filter>Source Files\Components</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\source\RespawnHelperComponent.cpp">
+      <Filter>Source Files\Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\pch.h">
@@ -282,6 +285,9 @@
       <Filter>Header Files\Helpers</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\StunStarComponent.h">
+      <Filter>Header Files\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\RespawnHelperComponent.h">
       <Filter>Header Files\Components</Filter>
     </ClInclude>
   </ItemGroup>
