--- a/Project/vs2017/Flagball/Flagball.vcxproj.filters
+++ b/Project/vs2017/Flagball/Flagball.vcxproj.filters
@@ -162,6 +162,9 @@
     <ClCompile Include="..\..\source\RespawnHelperComponent.cpp">
       <Filter>Source Files\Components</Filter>
     </ClCompile>
+    <ClCompile Include="BallFireComponent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\pch.h">
@@ -289,6 +292,9 @@
     </ClInclude>
     <ClInclude Include="..\..\include\RespawnHelperComponent.h">
       <Filter>Header Files\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\BallFireComponent.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
