added build and fixed release project paths

--- a/Project/vs2017/Flagball/Flagball.vcxproj
+++ b/Project/vs2017/Flagball/Flagball.vcxproj
@@ -234,7 +234,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>sfml-audio.lib;sfml-system.lib;sfml-graphics.lib;sfml-window.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>sfml-audio.lib;sfml-system.lib;sfml-graphics.lib;sfml-window.lib;tgui.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(SFMLROOT)\lib;$(TGUIROOT)/lib;</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
